# ttfpi-hs

./: CHANGELOG.md  LICENSE  flake.nix  shell.nix  ttfpi-hs.cabal
src/: FreeVariable.hs  Lambda.hs  MyLib.hs
